Osnovna struktura rada
Dodate sekcije i moguće subsekcije sa kratkim opisom šta treba napisati u svakoj subsekciji

--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -46,13 +46,53 @@ U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implemen
 \todo{Napisati uvod - ukratko nešto o istoriji blokčejna, čemu služi, zašto je koristan, pomenuti osnovne ideje koje se koriste (heširanje, merkle stabla, asimetrična kriptografija (digitalni potpisi) itd.)}
 Ovako treba da citiramo stvari \cite{haltingproblem}
 
-\section{Osnove kriptografije}	
-\label{sec:termini_i_citiranje}
+\section{Kriptografske osnove}	
+\label{sec:kriptografske_osnove}
+
 \subsection{Kriptografske heš funkcije}
 \todo{Napisati ovaj subsection}
+
 \subsection{Asimetrična kriptografija}
 \todo{Napisati ovaj subsection}
 
+\section{Blokčejn}
+\label{sec:blockchain}
+
+\subsection{Blokovi}
+\todo{Napisati ovaj subsection - apstraktnije opisati pojam bloka u blokčejnu generalno (ne samo kod bitkojna), način za postizanje konsenzusa (proof of work, proof of stake,...), forkovi}
+
+\subsection{Decentralizacija}
+\todo{Napisati ovaj subsection - opisati kako blokčejn koristi peer to peer mrežu, sa konkretnim primerom (na primer kako bitkojn radi broadcast ili šta već), prednosti i mane decentralizacije generalno - double spending ako neko ima preko 51\%, itd. }
+
+\section{Bitkojn (Bitcoin)}
+\label{sec:bitcoin}
+
+\subsection{Transakcije}
+\todo{Napisati kako se realizuju transakcije u bitkojnu, u suštini transakcije definišu šta je digitalni coin}
+
+\subsection{Blokčejn}
+\todo{Objasniti timestamp server i proof of work sekcije iz bitcoin rada}
+
+\subsection{Distribuirana mreža}
+\todo{Objasniti Network i incentive sekcije iz bitcoin rada}
+
+\subsection{Optimizacija memorije}
+\todo{Objasniti upotrebu merkle stabla, full node, pojednostavljenu verifikaciju ako neko nije full node itd.}
+
+\section{Primene}
+\label{sec:primene}
+
+\subsection{Kriptovalute}
+\todo{Napisati ovaj subsection}
+
+\subsection{Pametni ugovori}
+\todo{Napisati ovaj subsection - pomenuti eth pošto btc nije turing complete}
+
+\section{Diskusija}
+\todo{Napisati ovaj subsection - pomenuti prednosti i mane kriptovaluta, moguće napade na blokčejn 51\% i druge koji zahtevaju manje od toga, pojavu centralizacije u formi mining poolova, nešto iz ekonomije?, privatnost, kriminal itd.}
+
+\section{Zaključak}
+\todo{Napisati ovaj subsection}
 
 \addcontentsline{toc}{section}{Literatura}
 \appendix
