--- a/seminarski.bib
+++ b/seminarski.bib
@@ -1,14 +1,17 @@
-@article{haltingproblem,
-    author = {Turing, A. M.},
-    citeulike-article-id = {155758},
-    journal = {Proceedings of the London Mathematical Society},
-    keywords = {computability, entscheidungsproblem, turing},
-    number = {42},
-    pages = {230--265},
-    posted-at = {2005-04-08 18:11:59},
-    priority = {0},
-    title = {{On Computable Numbers, with an application to the Entscheidungsproblem}},
-    volume = {2},
-    year = {1936}
+@article{wood2014ethereum,
+  title={Ethereum: A secure decentralised generalised transaction ledger},
+  author={Wood, Gavin and others},
+  journal={Ethereum project yellow paper},
+  volume={151},
+  number={2014},
+  pages={1--2},
+  year={2014}
+}
+@article{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi},
+  journal={Decentralized Business Review},
+  pages={21260},
+  year={2008}
 }
 
