--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -156,6 +156,16 @@ Ukoliko se izvrši transakcija gde osoba $A$ pošalje $2$ bitkoina osobi $B$, š
 Posmatrajući protokol na ovaj način, jasno je da nema razloga ograničiti se na specifična stanja i funkciju izmene stanja kao što je ovde slučaj, već da ona mogu opisivati bilo koji željeni proces.
 Po ovom principu su nastali takozvani \textbf{pametni ugovori}.
 
+Pametni ugovor kao pojam prvobitno je predstavljao bilo koji protokol ili program koji se automatski izvršava po odredbama nekakvog ugovora.
+Uzmimo kao primer automat za kafu.
+Svrha ove mašine je da automatski izvršava odredbe ugovora "Kupac će dobiti kafu ukoliko plati odgovarajuću sumu novca". Međutim, kada bi se desilo da se mašina hakuje ili pokvari i ne napravi kupcu kafu iako je u nju ubacio novac, odredbe ugovora ne bi bile zadovoljene.
+Da bi se izbeglo to da je potrebno verovati sistemu da će ispravno izvršiti odredbe, kao i eventualne troškove zbog posledica u ovakvim situacijama, pametne ugovore je idealno implementirati u okviru blokčejna, što nam omogućava \textbf{Ethereum}.
+
+Danas sa pojavom Ethereum mreže se pojam pametnog ugovora uglavnom vezuje za bilo koji automatski proces koji se izvršava na blokčejnu.
+Ideja Ethereum protokola je da omogući decentralizovano izvršavanje bilo kakvog datog programa. Ovo se postiže različitim izmenama klasičnog bitkoin protokola.
+Glavna novina je što svaki "digitalni novčanik" uz svoju jedinstvenu adresu kao što je kod bitkoina takođe može imati memoriju i izvršivi kod u okviru sebe, nalik na prethodno opisano stanje i funkciju izmene stanja.
+Kod tj. izmena stanja se izvršava tako što se u transakcijama mogu dodati podaci koji predstavljaju ulazne vrednosti za taj proces.
+
 \section{Zaključak}
 \todo{Napisati ovaj subsection}
 
