Popravka za kompajlovanje

--- a/seminarski.bib
+++ b/seminarski.bib
@@ -15,19 +15,19 @@
   year={2008}
 }
 @article{shin2018chapterVcryptocurrencies,
-  title={Chapter \MakeUppercase{V} Cryptocurrencies: looking beyond the hype},
+  title={Chapter {V} {C}ryptocurrencies: looking beyond the hype},
   author={Hyun Song Shin},
   journal={BIS 2018 Annual Economic Report},
   year={2018}
 }
 @article{criddle2021bitcoin-electricity,
-  title={''\MakeUppercase{B}itcoin consumes 'more electricity than Argentina'.''},
+  title={Bitcoin consumes 'more electricity than {A}rgentina'.},
   author={Criddle, Christina},
   journal={BBC News},
   year={2021}
 }
 @article{teppo2018mitmenagmentrewiew,
-  title={''What Problems Will You Solve With Blockchain?''},
+  title={What Problems Will You Solve With Blockchain?},
   author={Felin, Teppo},
   journal={MIT Sloan Management Review},
   year={2018}
