--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -63,7 +63,7 @@ Da bi heš funkcija bila efektivna u kriptografiji treba da zadovoljava sledeće
 \item Nalaženje dve poruke koje imaju istu heš vrednost treba da bude praktično nemoguće. 
 \item Bilo kakve male promene u poruci treba da rezultiraju u većim promenama u heš vrednosti, tolike da je nemoguće povezati sa originalnom heš vrednošću, poznato kao 'avalanche effect'.
 \end{itemize}
-\\ Kako radi heš funkcija? Sledi algoritam za heširanje:\\
+Kako radi heš funkcija? Sledi algoritam za heširanje:\\
 Početna poruka podeljena je na više blokova. Najčešće veličina jednog bloka je između 128 i 512 bitova. Algoritam za heširanje se sastoji od ponavljanja algoritma heširanja na jednom bloku za svaki blok. Svako ponavljanje sastoji se od ulaza fiksne dužine, koji se najčešće sastoji od dela poruke za taj blok i heš vrednosti prethodnog bloka. Kako heš vrednost svakog bloka zavisi od heš vrednosti prethodnog, lako dolazi do ranije pomenutog 'avalance effect' -a, gde veoma slične poruke imaju potpuno različitu heš vrednost.
 
 \subsection{Asimetrična kriptografija}
