Popravljene mejl adrese autora

--- a/Blockchain Lazic Nikic Neskovic Sekesan.tex
+++ b/Blockchain Lazic Nikic Neskovic Sekesan.tex
@@ -22,7 +22,7 @@
 \title{Kako i zašto funkcioniše blockchain?\\ \small{Seminarski rad u okviru kursa\\Tehničko i naučno pisanje\\ Matematički fakultet}}
 \author{
     Lazić, Jovana\\ 
-    \texttt{kontakt email adresa autora}
+    \texttt{mi22021@alas.matf.bg.ac.rs}
     \and
     Nikić, Ognjen\\ 
     \texttt{mi22222@alas.matf.bg.ac.rs}
@@ -31,7 +31,7 @@
     \texttt{mi22009@alas.matf.bg.ac.rs}
     \and
     Sekešan, Pavle\\ 
-    \texttt{kontakt email adresa autora}
+    \texttt{mi22087@alas.matf.bg.ac.rs}
 }
 \date{\today}
 \maketitle
